--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionP">
       <div class="card-body">
         <p>
-          The New York Times Search uses a third party API call to search the NYT archives. The suer can input a range of years, subject, and the number of articles.
+          The New York Times Search uses a third party API call to search the NYT archives. The user can input a range of years, subject, and the number of articles.
         </p>
         <!-- These are the buttons with data-toggle tooltip added to add the tooltips to each -->
         <a href="https://github.com/jrtwheeler/NYTSearch" target="_blank" class="btn btn-primary button-github mb-2"
