Added resume link

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                 Github</a></li>
             <li class="list-group-item"><a href="https://github.com/jrtwheeler"><i class="fas fa-envelope-square"></i>
                 wheelewell@yahoo.com</a></li>
+            <li class="list-group-item"><a
+                href="https://drive.google.com/file/d/1dmIJTgKb7AynOw-nSpyL6B6r0_e_6NBL/view?usp=sharing"><i
+                  class="fas fa-file"></i>
+                </i>
+                Resume</a></li>
+
           </ul>
         </section>
       </article>
