Revised portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,15 +45,27 @@
           <p>
           <h2>Portfolio</h2>
           </p>
-          <p>
-          <ul>
-            <li><a href="https://www.linkedin.com/in/james-w-54270740/"><i class="fab fa-linkedin"></i>
-                Linked In</a></li>
-            <li><a href="https://github.com/jrtwheeler"><i class="fab fa-github"></i>
-                Github</a></li>
-          </ul>
-          </p>
         </div>
+          <div class="row">
+          <p>
+            <ul class="list-group list-group-horizontal-sm m-2">
+              <li class="list-group-item nav-web-button"><a href="https://www.linkedin.com/in/james-w-54270740/" target="_blank"><i
+                    class="fab fa-linkedin"></i>
+                  Linked In</a></li>
+              <li class="list-group-item"><a href="https://github.com/jrtwheeler" target="_blank"><i class="fab fa-github"></i>
+                  Github</a></li>
+              <li class="list-group-item"><i class="fas fa-envelope-square"></i>
+                  wheelewell@yahoo.com</a></li>
+              <li class="list-group-item"><a
+                  href="https://drive.google.com/file/d/1dmIJTgKb7AynOw-nSpyL6B6r0_e_6NBL/view?usp=sharing" target="_blank"><i
+                    class="fas fa-file"></i>
+                  </i>
+                  Resume</a></li>
+  
+            </ul>
+          </p>
+          </div>
+        
       </div>
     </div>
   </div>
@@ -76,27 +88,31 @@
       <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionP">
         <div class="card-body">
           <p>
-            The weather dashboard makes three API calls to open weather to return the daily and five day
-            forecast for a city the user inputs. The user inputs are saved to local storage as user history. The user history becomes buttons that can activate the API call for the weather forecast.
+            The food app lets the user choose a random meal and a random drink from
+            https://www.themealdb.com/api and https://www.thecocktaildb.com/api. If the user likes the food or drink, they can store the search. The food and drink divs have dropdowns to show the ingrediants and recipe.
           </p>
-          <!-- These are the buttons with data-toggle tooltip added to add the tooltips to each -->
-          <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank"
-            class="btn btn-primary button-github mb-2" data-toggle="tooltip" data-placement="top"
-            title="Open Github Repository"><i class="fab fa-github"></i></a>
-          <a href="https://jrtwheeler.github.io/Pour-Decision/" target="_blank"
-            class="btn btn-primary button-webpage mb-2" data-toggle="tooltip" data-placement="top"
-            title="Open Webpage"><i class="fas fa-globe"></i></a>
-          <br>
+          <div class="row">
           <!-- This is a bootstrap list group -->
-          <ul class="list-group">
+          <ul class="list-group list-group-horizontal-sm m-2">
             <li class="list-group-item"><i class="fas fa-code"></i> Coding Language</li>
             <li class="list-group-item"><i class="fab fa-js-square"> Javascript</i></li>
             <li class="list-group-item"><i class="fab fa-html5"></i> HTML5</li>
             <li class="list-group-item"><i class="fab fa-css3-alt"></i> CSS</li>
           </ul>
-          <br>
+        </div>
+          <!-- These are the buttons with data-toggle tooltip added to add the tooltips to each -->
+          <div class="row">
+          <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank"
+            class="btn btn-primary button-github m-1" data-toggle="tooltip" data-placement="top"
+            title="Open Github Repository"><i class="fab fa-github"></i></a>
+          <a href="https://jrtwheeler.github.io/Pour-Decision/" target="_blank"
+            class="btn btn-primary button-webpage m-1" data-toggle="tooltip" data-placement="top"
+            title="Open Webpage"><i class="fas fa-globe"></i></a>
+          </div>
+          <div class="row m-2">
           <img id="portrait" class="float-left mr-2 mb-2" src="assets/img/pour-decisions.png" class="card-img-top"
             alt="...">
+          </div>
         </div>
       </div>
     </div>
@@ -112,27 +128,31 @@
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionP">
         <div class="card-body">
           <p>
-            The food app lets the user choose a random meal and a random drink from
-            https://www.themealdb.com/api and https://www.thecocktaildb.com/api. If the user likes the food or drink, they can store the search. The food and drink divs have dropdowns to show the ingrediants and recipe.
+            The weather dashboard makes three API calls to open weather to return the daily and five day
+            forecast for a city the user inputs. The user inputs are saved to local storage as user history. The user history becomes buttons that can activate the API call for the weather forecast.
           </p>
-          <!-- These are the buttons with data-toggle tooltip added to add the tooltips to each -->
-          <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank"
-            class="btn btn-primary button-github mb-2" data-toggle="tooltip" data-placement="top"
-            title="Open Github Repository"><i class="fab fa-github"></i></a>
-          <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank"
-            class="btn btn-primary button-webpage mb-2" data-toggle="tooltip" data-placement="top"
-            title="Open Webpage"><i class="fas fa-globe"></i></a>
-          <br>
+          <div class="row">
           <!-- This is a bootstrap list group -->
-          <ul class="list-group">
+          <ul class="list-group list-group-horizontal-sm m-2">
             <li class="list-group-item"><i class="fas fa-code"></i> Coding Language</li>
             <li class="list-group-item"><i class="fab fa-js-square"> Javascript</i></li>
             <li class="list-group-item"><i class="fab fa-html5"></i> HTML5</li>
             <li class="list-group-item"><i class="fab fa-css3-alt"></i> CSS</li>
           </ul>
-          <br>
+        </div>
+        <div class="row">
+          <!-- These are the buttons with data-toggle tooltip added to add the tooltips to each -->
+          <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank"
+            class="btn btn-primary button-github m-1" data-toggle="tooltip" data-placement="top"
+            title="Open Github Repository"><i class="fab fa-github"></i></a>
+          <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank"
+            class="btn btn-primary button-webpage m-1" data-toggle="tooltip" data-placement="top"
+            title="Open Webpage"><i class="fas fa-globe"></i></a>
+          </div>
+          <div class="row m-2">
           <img id="portrait" class="float-left mr-2 mb-2" src="assets/img/weather-dashboard.png" class="card-img-top"
             alt="...">
+          </div>
         </div>
       </div>
     </div>
@@ -151,21 +171,25 @@
         <p>
           The New York Times Search uses a third party API call to search the NYT archives. The user can input a range of years, subject, and the number of articles.
         </p>
-        <!-- These are the buttons with data-toggle tooltip added to add the tooltips to each -->
-        <a href="https://github.com/jrtwheeler/NYTSearch" target="_blank" class="btn btn-primary button-github mb-2"
-          data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i class="fab fa-github"></i></a>
-        <a href="https://jrtwheeler.github.io/NYTSearch/" target="_blank" class="btn btn-primary button-webpage mb-2"
-          data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
-        <br>
         <!-- This is a bootstrap list group -->
-        <ul class="list-group">
+        <div class="row">
+        <ul class="list-group list-group-horizontal-sm m-2">
           <li class="list-group-item"><i class="fas fa-code"></i> Coding Language</li>
           <li class="list-group-item"><i class="fab fa-js-square"> Javascript</i></li>
           <li class="list-group-item"><i class="fab fa-html5"></i> HTML5</li>
           <li class="list-group-item"><i class="fab fa-css3-alt"></i> CSS</li>
         </ul>
-        <br>
-        <img id="portrait" class="float-left mr-2 mb-2" src="assets/img/nyt-archive.png" class="card-img-top" alt="...">
+      </div>
+        <!-- These are the buttons with data-toggle tooltip added to add the tooltips to each -->
+        <div class="row">
+        <a href="https://github.com/jrtwheeler/NYTSearch" target="_blank" class="btn btn-primary button-github m-1"
+          data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i class="fab fa-github"></i></a>
+        <a href="https://jrtwheeler.github.io/NYTSearch/" target="_blank" class="btn btn-primary button-webpage m-1"
+          data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
+        </div>
+        <div class="row">
+        <img id="portrait" class="float-center mr-2 mb-2" src="assets/img/nyt-archive.png" class="card-img-top" alt="...">
+      </div>
       </div>
     </div>
   </div>
