--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
             learner who is willing to educate myself through any available means. Experienced in meeting and beating
             deadlines.
           </p>
-          <ul class="list-group">
-            <li class="list-group-item"><a href="https://www.linkedin.com/in/james-w-54270740/"><i
+          <ul class="list-group list-group-horizontal">
+            <li class="list-group-item nav-web-button"><a href="https://www.linkedin.com/in/james-w-54270740/" target="_blank"><i
                   class="fab fa-linkedin"></i>
                 Linked In</a></li>
-            <li class="list-group-item"><a href="https://github.com/jrtwheeler"><i class="fab fa-github"></i>
+            <li class="list-group-item"><a href="https://github.com/jrtwheeler" target="_blank"><i class="fab fa-github"></i>
                 Github</a></li>
-            <li class="list-group-item"><a href="https://github.com/jrtwheeler"><i class="fas fa-envelope-square"></i>
+            <li class="list-group-item"><i class="fas fa-envelope-square"></i>
                 wheelewell@yahoo.com</a></li>
             <li class="list-group-item"><a
-                href="https://drive.google.com/file/d/1dmIJTgKb7AynOw-nSpyL6B6r0_e_6NBL/view?usp=sharing"><i
+                href="https://drive.google.com/file/d/1dmIJTgKb7AynOw-nSpyL6B6r0_e_6NBL/view?usp=sharing" target="_blank"><i
                   class="fas fa-file"></i>
                 </i>
                 Resume</a></li>
