Simplified portfolio html

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,25 +39,24 @@
   <!--Card-->
   <div class="jumbotron">
     <h1 class="display-4">PORTFOLIO</h1>
-    <p class="lead">This is my portfolio page. All of the front-end and back-end coding in projects on this page was written by me.</p>
+    <p class="lead">This is my portfolio page. All of the front-end and back-end coding in projects on this page was
+      written by me.</p>
     <hr class="my-4">
-    <p>I built these projects with a mixture of coffee, grit, HTML, CSS, Javascript, Bulma, Bootstrap, JSON, and JQUERY.</p>
+    <p>I built these projects with a mixture of coffee, grit, HTML, CSS, Javascript, Bulma, Bootstrap, JSON, and JQUERY.
+    </p>
     <a class="btn btn-primary btn-lg" href="contact.html" role="button">Contact Me</a>
   </div>
   <!--Card container-->
   <main class="container">
     <!--Card row-->
-    
-
-    <div class="parent-container d-flex">
-      <div class="row">
-        <div class="card-group">
+    <!-- <div class="row"> -->
+      <div class="card-group">
         <!-- The pour decision card with an accordian dropdown -->
         <div class="parent-container d-flex">
           <div class="row">
             <div class="col m-1">
               <div class="card" style="width: 18rem;">
-  
+
                 <div class="card-body">
                   <h4 class="card-title">POUR DECISIONS</h4>
                   <hr>
@@ -71,7 +70,7 @@
                     </button>
                     </h2>
                   </div>
-  
+
                   <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionP">
                     <div class="card-body">
                       <img src="assets/img/pour-decisions.png" class="card-img-top" alt="...">
@@ -79,8 +78,10 @@
                       <p class="card-text">Pour Decisions is an app that takes some of the time out of finding a recipe
                         for
                         dinner
-                        and drinks and gives it back to you. It lets the user choose a random meal and a random drink from
-                        https://www.themealdb.com/api and https://www.thecocktaildb.com/api. If the user likes the food or
+                        and drinks and gives it back to you. It lets the user choose a random meal and a random drink
+                        from
+                        https://www.themealdb.com/api and https://www.thecocktaildb.com/api. If the user likes the food
+                        or
                         drink,
                         they can store the search. The food and drink divs have dropdowns to show the ingrediants and
                         recipe.
@@ -114,7 +115,7 @@
           <div class="row">
             <div class="col m-1">
               <div class="card" style="width: 18rem;">
-  
+
                 <div class="card-body">
                   <h4 class="card-title">WEATHER DASHBOARD</h4>
                   <hr>
@@ -128,12 +129,13 @@
                     </button>
                     </h2>
                   </div>
-  
+
                   <div id="collapseTwo" class="collapse" aria-labelledby="headingOne" data-parent="#accordionW">
                     <div class="card-body">
                       <img src="assets/img/weather-dashboard.png" class="card-img-top" alt="...">
                       <hr>
-                      <p class="card-text">The weather dashboard makes three API calls to open weather to return the daily
+                      <p class="card-text">The weather dashboard makes three API calls to open weather to return the
+                        daily
                         and five day
                         forecast for a city the user inputs. The user inputs are saved to local storage as user history.
                         The user
@@ -168,7 +170,7 @@
           <div class="row">
             <div class="col m-1">
               <div class="card" style="width: 18rem;">
-  
+
                 <div class="card-body">
                   <h4 class="card-title">NYT SEARCH</h4>
                   <hr>
@@ -182,12 +184,13 @@
                     </button>
                     </h2>
                   </div>
-  
+
                   <div id="collapseThree" class="collapse" aria-labelledby="headingOne" data-parent="#accordionN">
                     <div class="card-body">
                       <img src="assets/img/nyt-archive.png" class="card-img-top" alt="...">
                       <hr>
-                      <p class="card-text">The weather dashboard makes three API calls to open weather to return the daily
+                      <p class="card-text">The weather dashboard makes three API calls to open weather to return the
+                        daily
                         and five day
                         forecast for a city the user inputs. The user inputs are saved to local storage as user history.
                         The user
@@ -219,8 +222,7 @@
         </div>
         <!-- The closing div for the row that holds the cards -->
       </div>
-    </div>
-    </div>
+    <!-- </div> -->
   </main>
   <!--Footer with centered text, fixed bottom, secondary background, white text-->
   <div class="card-footer text-muted text-center">
