Revised button descriptions

--- a/portfolio.html
+++ b/portfolio.html
@@ -94,10 +94,10 @@
                     <div class="row">
                       <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank"
                         class="btn btn-primary button-github m-1" data-toggle="tooltip" data-placement="top"
-                        title="View Github Repository"><i class="fab fa-github"></i></a>
+                        title="View Github Repository"><i class="fab fa-github"></i> See More</a>
                       <a href="https://jrtwheeler.github.io/Pour-Decision/" target="_blank"
                         class="btn btn-primary button-webpage m-1" data-toggle="tooltip" data-placement="top"
-                        title="View Webpage"><i class="fas fa-globe"></i></a>
+                        title="View Webpage"><i class="fas fa-globe"></i> Open</a>
                     </div>
                   </div>
                 </div>
@@ -149,10 +149,10 @@
                     <div class="row">
                       <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank"
                         class="btn btn-primary button-github m-1" data-toggle="tooltip" data-placement="top"
-                        title="Open Github Repository"><i class="fab fa-github"></i></a>
+                        title="Open Github Repository"><i class="fab fa-github"></i> See More</a>
                       <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank"
                         class="btn btn-primary button-webpage m-1" data-toggle="tooltip" data-placement="top"
-                        title="Open Webpage"><i class="fas fa-globe"></i></a>
+                        title="Open Webpage"><i class="fas fa-globe"></i> Open</a>
                     </div>
                   </div>
                 </div>
@@ -204,10 +204,10 @@
                     <div class="row">
                       <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank"
                         class="btn btn-primary button-github m-1" data-toggle="tooltip" data-placement="top"
-                        title="Open Github Repository"><i class="fab fa-github"></i></a>
+                        title="Open Github Repository"><i class="fab fa-github"></i> See More</a>
                       <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank"
                         class="btn btn-primary button-webpage m-1" data-toggle="tooltip" data-placement="top"
-                        title="Open Webpage"><i class="fas fa-globe"></i></a>
+                        title="Open Webpage"><i class="fas fa-globe"></i> Open</a>
                     </div>
                   </div>
                 </div>
