Fixed link to NYT Archive

--- a/portfolio.html
+++ b/portfolio.html
@@ -202,10 +202,10 @@
                       </ul>
                     </div>
                     <div class="row">
-                      <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank"
+                      <a href="https://github.com/jrtwheeler/NYTSearch" target="_blank"
                         class="btn btn-primary button-github m-1" data-toggle="tooltip" data-placement="top"
                         title="Open Github Repository"><i class="fab fa-github"></i> See More</a>
-                      <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank"
+                      <a href="https://jrtwheeler.github.io/NYTSearch//" target="_blank"
                         class="btn btn-primary button-webpage m-1" data-toggle="tooltip" data-placement="top"
                         title="Open Webpage"><i class="fas fa-globe"></i> Open</a>
                     </div>
